created js/app.module.js and app.routes.js

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Broadway Bound</title>
-  <<meta charset="utf-8">
+  <meta charset="utf-8">
 
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -27,9 +27,16 @@
       </nav>
     </header>
 
-    <main class="content" ui-view></main>
+    <main class="content" ui-view>
+      <!-- ui-router (aka ui.router) inserts templates here -->
+    </main>
 
-
-
+    <script src="/js/app.module.js"></script>
+    <script src="/js/app.routes.js"></script>
+    <script src="/js/token.service.js"></script>
+    <script src="/js/auth.service.js"></script>
+    <script src="/js/user.service.js"></script>
+    <script src="/js/signin.controller.js"></script>
+    <script src="/js/navbar.controller.js"></script>
 </body>
 </html>
