auth setup, user data service setup

--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
 
   <script src="/js/app.module.js"></script>
   <script src="/js/app.routes.js"></script>
-  <!-- <script src="/services/auth.service.js"></script>
-  <script src="/services/user.dataservice.js"></script> -->
+  <script src="/services/auth.service.js"></script>
+  <script src="/services/user.dataservice.js"></script>
   <script src="/controllers/main_controller.js"></script>
   <!-- <script src="/controllers/login_controller.js"></script>
   <script src="/controllers/users_controller.js"></script>
