--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,16 @@
   <div class="container">
     <ul class="nav nav-tabs">
       <li role="presentation" ui-sref-active="active">
-        <a ui-sref="homePage">Home</a>
+        <a ui-sref="home">Home</a>
       </li>
       <li role="presentation" ui-sref-active="active">
-        <a ui-sref="aboutPage">About</a>
+        <a ui-sref="about">About</a>
       </li>
       <li role="presentation" ui-sref-active="active" ng-hide="vm.isLoggedIn()">
         <a ui-sref="register">Register</a>
+      </li>
+      <li role="presentation">
+        <a ui-sref="login">Log In</a>
       </li>
       <li role="presentation" ui-sref-active="active" ng-show="vm.isLoggedIn()">
         <a ui-sref="triumphs">Recommended</a>
